# holt

./: .gitignore  AGENTS.md  HOLT_ARCHITECTURE.md  README.md  mix.exs
.github/workflows/: release.yml
docs/: onboarding-plan.md
lib/: holt.ex  holt_works.ex
lib/holt/: action_visibility.ex  actions.ex  agent_runtime.ex  agents.ex  application.ex  approvals.ex  boot.ex  clock.ex  config.ex  env.ex  file_diff.ex  gateway.ex  json.ex  local_actions.ex  memory.ex  models.ex  pages.ex  paths.ex  repair_runs.ex  research_claims.ex  runtime.ex  skills.ex  tasks.ex  text_match.ex  tool_visibility.ex  tools.ex  web_search.ex  workspace.ex
lib/holt/actions/: action_catalog.ex  execution.ex  executor.ex  provider_adapter.ex  provider_registry.ex  registry.ex  todos.ex  tool_catalog.ex
lib/holt/bridge/: native_command.ex  native_presenter.ex  stdio.ex
lib/holt/runtime/: agent_event_store.ex  agent_events.ex  chat_messages.ex  context.ex  (+7 more)
lib/holt_works/: actions.ex  agent_runtime.ex  agents.ex  application.ex  approvals.ex  cli.ex  clock.ex  config.ex  env.ex  gateway.ex  json.ex  memory.ex  models.ex  pages.ex  paths.ex  repair_runs.ex  research_claims.ex  runtime.ex  skills.ex  tasks.ex  text_match.ex  tools.ex  web_search.ex  workspace.ex
rust/: Cargo.toml  TUI_PARITY.md
rust/crates/holt-actions/: Cargo.toml
rust/crates/holt-actions/src/: lib.rs
rust/crates/holt-cli/: Cargo.toml
rust/crates/holt-cli/src/: backend.rs  commands.rs  history.rs  inline.rs  keymap.rs  main.rs  terminal.rs  tui.rs  tui_frame.rs  turn.rs  ui.rs
rust/crates/holt-core/: Cargo.toml
rust/crates/holt-core/src/: lib.rs
rust/crates/holt-models/: Cargo.toml
rust/crates/holt-models/src/: lib.rs
rust/crates/holt-policy/: Cargo.toml
rust/crates/holt-policy/src/: lib.rs
rust/crates/holt-protocol/: Cargo.toml
rust/crates/holt-protocol/src/: lib.rs
rust/crates/holt-sessions/: Cargo.toml
rust/crates/holt-sessions/src/: lib.rs
rust/crates/holt-telemetry/: Cargo.toml
rust/crates/holt-telemetry/src/: lib.rs
rust/crates/holt-tools/: Cargo.toml
rust/crates/holt-tools/src/: lib.rs
rust/crates/holt-tui/: Cargo.toml
rust/crates/holt-tui/src/: lib.rs
rust/crates/holt-workspace/: Cargo.toml
rust/crates/holt-workspace/src/: lib.rs
scripts/: install.ps1  install.sh
test/: holt_test.exs  holt_works_test.exs
test/holt/: agents_test.exs  application_test.exs  memory_test.exs  models_test.exs  pages_test.exs  repair_runs_test.exs  research_claims_test.exs  runtime_events_test.exs  runtime_foundation_test.exs  web_search_test.exs
(+216 files in other folders)
