[workspace]
members = [
    "crates/holt-cli",
    "crates/holt-core",
    "crates/holt-models",
    "crates/holt-policy",
    "crates/holt-protocol",
    "crates/holt-sessions",
    "crates/holt-telemetry",
    "crates/holt-tools",
    "crates/holt-tui",
    "crates/holt-workspace",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.2"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

holt-core = { path = "crates/holt-core" }
holt-models = { path = "crates/holt-models" }
holt-policy = { path = "crates/holt-policy" }
holt-protocol = { path = "crates/holt-protocol" }
holt-sessions = { path = "crates/holt-sessions" }
holt-telemetry = { path = "crates/holt-telemetry" }
holt-tools = { path = "crates/holt-tools" }
holt-tui = { path = "crates/holt-tui" }
holt-workspace = { path = "crates/holt-workspace" }
