[workspace]
members = [
    "crates/holt-cli",
    "crates/holt-core",
    "crates/holt-models",
    "crates/holt-policy",
    "crates/holt-protocol",
    "crates/holt-sessions",
    "crates/holt-telemetry",
    "crates/holt-actions",
    "crates/holt-tui",
    "crates/holt-workspace",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.2"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.28"
mermaid-text = "0.56"
pulldown-cmark = "0.13"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = "5"

holt-core = { path = "crates/holt-core" }
holt-models = { path = "crates/holt-models" }
holt-policy = { path = "crates/holt-policy" }
holt-protocol = { path = "crates/holt-protocol" }
holt-sessions = { path = "crates/holt-sessions" }
holt-telemetry = { path = "crates/holt-telemetry" }
holt-actions = { path = "crates/holt-actions" }
holt-tui = { path = "crates/holt-tui" }
holt-workspace = { path = "crates/holt-workspace" }
