[package]
name = "holt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "holt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
crossterm.workspace = true
holt-core.workspace = true
holt-protocol.workspace = true
mermaid-text.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
serde_json.workspace = true
syntect.workspace = true
